# deinflector

./: .gitignore  Cargo.toml  README.md
src/: cjk_utils.rs  descriptors.rs  japanese.rs  language_d.rs  languages.rs  lib.rs  multi_language_transformer.rs  text_preprocessors.rs  text_processors.rs  transformer.rs  transforms.rs  wanakana.rs
src/en/: en_transforms.rs  mod.rs
src/es/: es_transforms.rs  mod.rs
src/ja/: ja_transforms.rs  japanese.rs  mod.rs
src/zh/: chinese.rs
tests/multi_language_transformer/: transform.json
