[package]
name = "language_transformer"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
derive_more = { version = "2.0.1", features = ["debug"] }
fancy-regex = "0.14.0"
indexmap = "2.7.1"
pretty_assertions = "1.4.1"
## regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
snafu = "0.8.5"
thiserror = "2.0.11"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"
wana_kana = "4.0.0"
